--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/blog.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -19,9 +20,102 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   </head><!--/head-->
   <body>
-    <!-- Inserte código aqui -->
+
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="images/logo.png" alt="">
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>  
+    <section class="blog">
+        <div class="container">
+            <div class="row vertical-centered-text">
+                <div class="col-sm-8">
+                    <h2>Blog</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col-sm-4 text-right">
+                    <a href="index.html"><strong>Home</strong></a> | Blog
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="box-white">
+                                <img src="images/blog/blog1.jpg" alt="">
+                                <div class="article">
+                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                                    <h6><i class="fa fa-user"></i> Jhon</h6>
+                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
+                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
+                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 3 Comments</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
+                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
+                                </div>
+                            </div>
+                            <div class="box-white">
+                                <img src="images/blog/blog2.jpg" alt="">
+                                <div class="article">
+                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                                    <h6><i class="fa fa-user"></i> Jhon</h6>
+                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
+                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
+                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 0 Comments</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque!</p>
+                                    <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
