Imagenes blog, categorias

--- a/blog.html
+++ b/blog.html
@@ -95,7 +95,7 @@
                                     <button type="button" class="btn btn-default">Read More <i class="fa fa-angle-right"></i></button>
                                 </div>
                             </div>
-                            <div class="box-white">
+                            <div class="box-white mt-2">
                                 <img src="images/blog/blog2.jpg" alt="">
                                 <div class="article">
                                     <h3>Lorem ipsum dolor sit amet consectetur.</h3>
@@ -111,9 +111,89 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                                </span>
+                            </div><!-- /input-group -->
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad1.png" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad3.png" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad4.png" alt="">
+                        </div>
+                    </div>
+                    <h3>Blog Categories</h3>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Joomla</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Wordpress</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Drupal</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Magento</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Bootstrap</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Tag Cloud</h3>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <span class="label label-primary">CSS3</span>
+                            <span class="label label-primary">HTML5</span>
+                            <span class="label label-primary">WordPress</span>
+                            <span class="label label-primary">Joomla</span>
+                            <span class="label label-primary">Drupal</span>
+                            <span class="label label-primary">Bootstrap</span>
+                            <span class="label label-primary">JQuery</span>
+                            <span class="label label-primary">Tutorial</span>
+                            <span class="label label-primary">UpDate</span>
+                        </div>
+                    </div>
+                    <h3>Facebook fanpage</h3>
                 </div>
             </div>
+            <nav>
+              <ul class="pagination">
+                <li>
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                  <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
         </div>
     </section>
 
