--- a/blog.html
+++ b/blog.html
@@ -43,28 +43,28 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">Home</a>
+                        <a class="page-scroll" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">About Us</a>
+                        <a class="page-scroll" href="about-us.html">About Us</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Services</a>
+                        <a class="page-scroll" href="services.html">Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Portfolio</a>
+                        <a class="page-scroll" href="portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Blog</a>
+                        <a class="page-scroll" href="blog.html">Blog</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>  
-    <section class="blog">
+    <section class="cabecera-verde">
         <div class="container">
             <div class="row vertical-centered-text">
                 <div class="col-sm-8">
@@ -196,6 +196,62 @@
             </nav>
         </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h3>About Us</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+          </div>
+          <div class="col-md-3">
+            <h3>Company</h3>
+            <li>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+              <a href=""><i class="fa fa-angle-right"></i>Company Overview</a>
+            </li>
+
+          </div>
+          <div class="col-md-3">
+            <h3>Latest Blog</h3>
+         <!--    <div class="media">
+      <div class="media-left media-middle">
+        <a href="#">
+          <img class="media-object" src="images/blog/thumb1.jpg" alt="...">
+        </a>
+      </div>
+      <div class="media-body">
+        <p>hfjd</p>
+      </div>
+    </div> -->
+
+
+    <div class="media">
+      <div class="media-left">
+        <a href="#">
+          <img class="media-object" src="..." alt="...">
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">Media heading</h4>
+        ...
+      </div>
+    </div>
+          </div>
+
+          <div class="col-md-3">
+            <h3>Address</h3>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
