--- a/about-us.html
+++ b/about-us.html
@@ -10,6 +10,7 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/about-us.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -19,9 +20,185 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head><!--/head-->
 <body>
-    <!-- Inserte código aqui -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="images/logo.png" alt="">
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>  
+    <section class="cabecera-verde">
+        <div class="container">
+            <div class="row vertical-centered-text">
+                <div class="col-sm-8">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col-sm-4 text-right">
+                    <a href="index.html"><strong>Home</strong></a> | About Us
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3>What we are</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium delectus dolorum architecto, provident saepe repellendus eum eveniet doloribus at dolore ipsa voluptates quia quidem cumque porro, beatae nobis. Delectus, asperiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo officia veniam soluta quisquam optio nulla adipisci dolor vel facilis doloribus reiciendis, aut sapiente, recusandae perferendis doloremque expedita, fuga voluptatibus repellendus.</p>
+                </div>
+                <div class="col-sm-6">
+                    <h3>Our Skills</h3>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                        HTML/CSS
+                      </div>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                        Wordpress
+                      </div>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                        Joomla
+                      </div>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 55%">
+                        Drupal
+                      </div>
+                    </div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+                        PHP
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content team">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-sm-12">
+                    <h3>Meet the Team</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-sm-3">
+                    <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
+                    <p>David J. Robbins</p>
+                    <h6>Senior Vice President</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="box fb">
+                        <i class="fa fa-facebook"></i>
+                    </div>
+                    <div class="box gp">
+                        <i class="fa fa-google-plus"></i>
+                    </div>
+                    <div class="box tw">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                    <div class="box in">
+                        <i class="fa fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
+                    <p>David J. Robbins</p>
+                    <h6>Senior Vice President</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="box fb">
+                        <i class="fa fa-facebook"></i>
+                    </div>
+                    <div class="box gp">
+                        <i class="fa fa-google-plus"></i>
+                    </div>
+                    <div class="box tw">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                    <div class="box in">
+                        <i class="fa fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
+                    <p>David J. Robbins</p>
+                    <h6>Senior Vice President</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="box fb">
+                        <i class="fa fa-facebook"></i>
+                    </div>
+                    <div class="box gp">
+                        <i class="fa fa-google-plus"></i>
+                    </div>
+                    <div class="box tw">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                    <div class="box in">
+                        <i class="fa fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
+                    <p>David J. Robbins</p>
+                    <h6>Senior Vice President</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <div class="box fb">
+                        <i class="fa fa-facebook"></i>
+                    </div>
+                    <div class="box gp">
+                        <i class="fa fa-google-plus"></i>
+                    </div>
+                    <div class="box tw">
+                        <i class="fa fa-twitter"></i>
+                    </div>
+                    <div class="box in">
+                        <i class="fa fa-linkedin"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
