--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/portfolio.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -21,8 +22,262 @@
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
 <body>
-    <!-- Inserte código aqui -->
+    
+     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="images/logo.png" alt="">
+                </a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="#about">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#services">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="portfolio">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+            <h1>Portfolio</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor.</p>  
+            </div>
+            <div class="col-md-5">
+            </div>
+        </div>
+        </div>
+    </div>
+
+    <div class="trabajos">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/portfolio/full/item3.jpg" alt=""> 
+                    <div class="caption">
+                    <h5>Nova- corporate site template</h5>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/portfolio/full/item2.jpg" alt=""> 
+                    <div class="caption">
+                    <h5>Nova- corporate site template</h5>
+                    </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/portfolio/full/item3.jpg" alt=""> 
+                    <div class="caption">
+                    <h5>Nova- corporate site template</h5>
+                    </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="trabajos">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/portfolio/full/item4.jpg" alt=""> 
+                    <div class="caption">
+                    <h5>Nova- corporate site template</h5>
+                    </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/portfolio/full/item5.jpg" alt=""> 
+                    <div class="caption">
+                    <h5>Nova- corporate site template</h5>
+                    </div>
+                    </div>
+
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                        <img src="images/portfolio/full/item6.jpg" alt=""> 
+                    <div class="caption">
+                    <h5>Nova- corporate site template</h5>
+                    </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+<div class="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h3>About Us</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+      </div>
+      <div class="col-md-3 fila">
+        <h3>Company</h3>
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+         <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+         <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+
+        <a href="">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span>Finanzas y Fiscalizacion</span>
+        </a>
+      </div>
+
+      <div class="col-md-3">
+        <h3>Latest Blog</h3>
+        <div class="row foto">
+        <div class="col-md-4">
+        <a href="#">
+        <img class="media-objet" src="images/blog/thumb1.jpg">
+        </a>  
+        </div>
+        <div class="col-md-8">
+            <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+        </div>
+        </div>
+
+        <div class="row foto">
+        <div class="col-md-4">
+        <a href="#">
+        <img class="media-objet" src="images/blog/thumb2.jpg">
+        </a>  
+        </div>
+        <div class="col-md-8">
+            <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+        </div>
+        </div>
+
+        <div class="row foto">
+        <div class="col-md-4">
+        <a href="#">
+        <img class="media-objet" src="images/blog/thumb3.jpg">
+        </a>  
+        </div>
+        <div class="col-md-8">
+            <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+        </div>
+        </div>
+    </div>
+
+      <div class="col-md-3">
+        <h3>Address</h3>
+        <br>
+        <h5>Twitter, Inc</h5>
+        <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+        <div class="go">
+            <h3>Newsletter</h3>
+        <div class="input-group">
+        <input type="text" class="form-control" placeholder="Enter your email">
+        <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+        </span>
+        </div>
+        </div>
+    </div>
+    </div>
+    </div>
+</div>
+
+<footer>
+<div class="row">
+<div class="col-md-6">
+    <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+</div>
+<div class="col-md-6 footer-nav">
+    <ul class="nav navbar-nav navbar-right">
+        <li>
+        <a class="page-scroll" href="#about">Home</a>
+        </li>
+        <li>
+        <a class="page-scroll" href="#services">About Us</a>
+        </li>
+        <li>
+        <a class="page-scroll" href="#portfolio">Contact Us</a>
+        </li>
+    </ul>
+</div>
+</div>
+</footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
