--- a/blog.html
+++ b/blog.html
@@ -122,19 +122,19 @@
                         </div>
                     </div>
                     <div class="row mt-5">
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad1.png" alt="">
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad1.png" alt="">
                         </div>
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad2.png" alt="">
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad2.png" alt="">
                         </div>
                     </div>
                     <div class="row mt-5">
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad3.png" alt="">
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad3.png" alt="">
                         </div>
-                        <div class="col-sm-6">
-                            <img class="img-rounded" src="images/ads/ad4.png" alt="">
+                        <div class="col-xs-6">
+                            <img class="img-rounded img-full" src="images/ads/ad4.png" alt="">
                         </div>
                     </div>
                     <h3>Blog Categories</h3>
@@ -251,39 +251,39 @@
             </a>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-12">
             <h3>Latest Blog</h3>
             <div class="row foto">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-2">
             <a href="#">
-            <img class="media-objet" src="images/blog/thumb1.jpg">
+            <img class="media-objet img-full" src="images/blog/thumb1.jpg">
             </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 17 Aug 2013</h6>
             </div>
             </div>
 
             <div class="row foto">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-2">
             <a href="#">
-            <img class="media-objet" src="images/blog/thumb2.jpg">
+            <img class="media-objet img-full" src="images/blog/thumb2.jpg">
             </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 13 Sep 2013</h6>
             </div>
             </div>
 
             <div class="row foto">
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-2">
             <a href="#">
-            <img class="media-objet" src="images/blog/thumb3.jpg">
+            <img class="media-objet img-full" src="images/blog/thumb3.jpg">
             </a>  
             </div>
-            <div class="col-md-8">
+            <div class="col-md-8 col-xs-10">
                 <h5>Lorem ipsum dolor sit amet, consectetu.</h5> 
                 <h6>Posted 11 Jul 2013</h6>
             </div>
@@ -312,19 +312,19 @@
     <footer>
         <div class="container">
             <div class="row vertical-centered-text ">
-                <div class="col-md-6">
+                <div class="col-md-6 col-xs-12">
                     <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
                 </div>
-                <div class="col-md-6 footer-nav">
+                <div class="col-md-6 col-xs-12 footer-nav">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a class="page-scroll" href="#about">Home</a>
+                            <a class="page-scroll" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#services">About Us</a>
+                            <a class="page-scroll" href="about-us.html">About Us</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#portfolio">Contact Us</a>
+                            <a class="page-scroll" href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
